@@ -2,6 +2,7 @@
 Version 0.5.1	- xx June 2001
   * Don't produce unused global warnings when using a module in parameters
   * Don't produce unused global warnings when using a module in class variables
+  * Add check for right # of args to object construction in calling module
   * Check for returning a value from __init__
   * Experimental support for checking consistent return values
 
